Fix favorite star color in dark mode losing purple on active state

--- a/packages/excalidraw/components/ProjectManager/ProjectManager.scss
+++ b/packages/excalidraw/components/ProjectManager/ProjectManager.scss
@@ -797,6 +797,10 @@
         color: var(--pm-star);
       }
 
+      &.ProjectCard__favoriteBtn--active {
+        color: var(--pm-star);
+      }
+
       &.ProjectCard__favoriteBtn--active:hover {
         color: var(--color-primary-hover);
       }
